--- a/src/landing/landing.css
+++ b/src/landing/landing.css
@@ -3,48 +3,45 @@
   width: 100vw;
   height: 100vh;
   background-color: white;
-  color:black;
+  color: black;
   font-family: Proxima Nova;
   font-size: 24pt;
-
 }
 
-.signupB{
- background-color:#022851;
-  border-radius:20px;
+.signup {
+  background-color: #022851;
+  border-radius: 20px;
   text-decoration: none;
   color: white;
   font-family: Open Sans;
-  width:100px;
-  height:40px;
+  width: 100px;
+  height: 40px;
   font-size: 14pt;
   font-weight: bold;
   text-align: center;
   align-content: center;
 }
-.loginB{
- background-color:#FFBF00;
-  border-radius:20px;
+.login {
+  background-color: #ffbf00;
+  border-radius: 20px;
   text-decoration: none;
   color: white;
   font-family: Open Sans;
-  width:100px;
-  height:40px;
+  width: 100px;
+  height: 40px;
   font-size: 14pt;
   font-weight: bold;
-   text-align: center;
-   align-content: center;
-
-}
-
-.bTxt{
- line-height: 0px;
-}
-
-Button{
+  text-align: center;
   align-content: center;
 }
 
+.bTxt {
+  line-height: 0px;
+}
+
+Button {
+  align-content: center;
+}
 
 Nav {
   display: flex;
@@ -67,53 +64,77 @@ Nav {
 .PictureCard {
   height: 400px;
   width: 250px;
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
   border-radius: 16px;
   margin: 20px;
-  font-family:Open Sans;
+  font-family: Open Sans;
   font-size: 12pt;
-  color:black;
+  color: black;
   align-content: center;
-
 }
 
-.name{
+.name {
   position: absolute;
   bottom: 0;
   left: 0;
-  margin:auto;
+  margin: auto;
 }
 
-.logo{
+.logo {
   position: absolute;
   width: 10%;
   left: 10px;
 }
 
-.search{
+.search {
   display: flex;
   align-items: flex-start;
-  background-color:#EFEFEF;
-  border-radius:20px;
+  background-color: #efefef;
+  border-radius: 20px;
   width: 50%;
   margin-left: 90px;
-  height:40px;
-
+  height: 40px;
 }
 
-.searchIcon{
+.searchIcon {
   width: 20px;
   padding: 10px;
-
 }
+
+.profileContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  /* width: 1024px;*/
+  align-content: space-between;
+}
+
+@media screen and (max-width: 525px) {
 
 .profileContainer{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
   width:100%;
   height:100%;
  /* width: 1024px;*/
   align-content: space-between;
+  justify-content: center;
 }
 
+Nav{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+   /* height:20%;*/
+}
+
+.login{
+  position:absolute;
+  left:10%;
+}
+
+
+}
