--- a/src/main/main.css
+++ b/src/main/main.css
@@ -7,15 +7,20 @@
   font-family: Proxima Nova;
   font-size: 24pt;
 }
+p {
+  font-family: "Open Sans", sans-serif;
+}
 Nav {
   display: flex;
   box-shadow: black;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: start; */
   min-height: 7vh;
   color: #000;
 }
 .welcome {
+  font-weight: bold;
+  font-size: 45px;
   height: 10vh;
   width: 100vw;
   margin-top: 100px;
@@ -35,12 +40,43 @@ Nav {
   color: black;
   align-content: center;
 }
+.PictureCard:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  box-shadow: 0 1.25vw 3.33vw 0 rgba(0, 0, 0, 0.32);
+}
+.avatar {
+  background-color: gray;
+  border-radius: 50px;
+}
+.avatar:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  box-shadow: 0 1vw 3.33vw 0 rgba(0, 0, 0, 0.32);
+}
+.dropdown {
+  /* background-color: red; */
+  display: inline-block;
+  width: 100px;
+  margin: 10px;
+}
 
-.name {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  margin: auto;
+.search {
+  width: 10px;
+  background-color: transparent;
+}
+.logoImage {
+  width: 100px;
+  margin-bottom: 85px;
+}
+.advanceSearch {
+  margin-top: 50px;
+}
+#personname {
+  font-family: "Acme", sans-serif;
+  font-size: 25px;
+  font-weight: bold;
+  color: black;
 }
 
 .logo {
@@ -49,28 +85,52 @@ Nav {
   left: 10px;
 }
 
-.search {
-  display: flex;
-  align-items: flex-start;
-  background-color: #efefef;
-  border-radius: 20px;
-  width: 60%;
-  margin-left: 110px;
-  height: 40px;
-  border-color: none;
-}
-
-.searchIcon {
-  width: 20px;
-  padding: 10px;
+.genderPick {
+  /* background-color: yellow; */
 }
 
 .profileContainer {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  width: 50vw;
-  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+  width: 40px;
+
   /* width: 1024px;*/
   align-content: space-between;
+}
+
+#cardpic {
+  width: 100%;
+  max-height: 70%;
+  object-fit: cover;
+  display: inline-block;
+  border-top-right-radius: 16px;
+  border-top-left-radius: 16px;
+}
+
+@media screen and (max-width: 525px) {
+  .profileContainer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    /* width: 1024px;*/
+    align-content: space-between;
+    justify-content: center;
+  }
+
+  Nav {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    /* height:20%;*/
+  }
+
+  .login {
+    position: absolute;
+    left: 10%;
+  }
 }
